# multi_queue_processor

./: CMakeLists.txt  EventLoop.h  EventQueue.h  IConsumer.h  IDispatcher.h  IReceiver.h  MultiQueueFacade.h  MultiQueueProcessor.h  SynchronousDispatcher.h  fwd.h  main.cpp
